--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,57 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TodoApp</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>TodoApp</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="m-1 p-1 ">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-7 ">
+                <h3 class="bg-primary text-white p-3">[can]TodoList </h3>
+
+                <div class="input-group">
+                    <input type="text" class="form-control">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary">Add</button>
+                    </div>
+                </div>
+                <table class="table table-striped table-bordered table-hover ">
+                    <thead>
+                        <tr>
+                            <th>Description</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Kahvalti</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>Spor</td>
+                            <td>No</td>
+                        </tr>
+                        <tr>
+                            <td>Fatura odeme</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>Cinema</td>
+                            <td>No</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
